examples/datalog/12_errors/60_cyclic_negation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cyclic_neg
Knowledge graph 'test_cyclic_neg' created.
Switched to knowledge graph: test_cyclic_neg
> .kg use test_cyclic_neg
Switched to knowledge graph: test_cyclic_neg
> +base[(1,)].
Inserted 1 fact(s) into 'base'.
> +a(X) :- base(X), !b(X).
Rule 'a' registered.
> +b(X) :- base(X), !a(X).
Script error: Failed to register rule: Unstratified negation: 'a' negates 'b' within a recursive cycle. Negation through recursion is not supported. Cycle: [a, b]
